<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#22b9ff"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/quiz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz1"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#80033b"

            />
        <RadioGroup
            android:id="@+id/groupId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />

            <RadioButton
                android:id="@+id/op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"


                />


        </RadioGroup>



        <Button
            android:id="@+id/bu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textSize="15sp"
            android:textColor="#1b1d1c"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/res1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#7612e9"
            android:layout_marginBottom="5dp"

            />
        <TextView
            android:id="@+id/quiz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz2"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#80033b"

            />
        <RadioGroup
            android:id="@+id/groupId2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/op21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option21"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option22"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />

            <RadioButton
                android:id="@+id/op23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option23"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option24"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"


                />


        </RadioGroup>
        <Button
            android:id="@+id/bu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textSize="15sp"
            android:textColor="#1b1d1c"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/res2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#7612e9"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:text="Back"
                android:textAllCaps="false"
                android:textColor="#80033b"
                android:textSize="15sp"
                android:textStyle="bold"
               />

            <Button
                android:id="@+id/next"
                android:layout_marginLeft="100dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#80033b"

                />
        </LinearLayout>

    </LinearLayout>




</ScrollView>