<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#56eaea"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".part3">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quiz5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz5"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#80033b"

            />
        <RadioGroup
            android:id="@+id/groupId5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/op31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option51"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op52"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option52"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />

            <RadioButton
                android:id="@+id/op53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option53"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option54"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"


                />


        </RadioGroup>



        <Button
            android:id="@+id/bu5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textSize="15sp"
            android:textColor="#1b1d1c"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/res5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#7612e9"
            android:layout_marginBottom="5dp"

            />

        <TextView
            android:id="@+id/quiz6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz6"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#80033b"

            />
        <RadioGroup
            android:id="@+id/groupId6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/op61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option61"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option62"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />

            <RadioButton
                android:id="@+id/op63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option63"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"

                />
            <RadioButton
                android:id="@+id/op64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option64"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#80033b"


                />


        </RadioGroup>



        <Button
            android:id="@+id/bu6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textSize="15sp"
            android:textColor="#1b1d1c"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/res6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="#7612e9"
            android:layout_marginBottom="5dp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:text="Back"
                android:textAllCaps="false"
                android:textColor="#80033b"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:baselineAligned="false"
                android:text="Next"
                android:textAllCaps="false"
                android:textColor="#80033b"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>